added new functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database=local
-spring.data.mongodb.port=27017
+#server.port=5000
+#spring.data.mongodb.uri=mongodb://mongodb/docker-db
